fixed services text overflow

--- a/style.scss
+++ b/style.scss
@@ -342,7 +342,7 @@ body {
         }
 
         span {
-            max-height: 120px;
+            max-height: 150px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
